# bookwyrm

./: .clang-format  .envrc  .gitignore  .gitlab-ci.yml  .gitmodules  .ycm_extra_conf.py  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  HACKING.md  LICENSE  LICENSE.md  README  README.md  TODO.md  bookwyrm  compile_commands.json  default.nix  item.py  setup.cfg  setup.py  shell.nix  testing.py
bookwyrm/: __init__.py  bookwyrm.py  gscholar.py  item.py  libgen.py  scihub.py  utils.py
bookwyrm/libgen/: __init__.py  libgen.py
bookwyrm/scihub/: __init__.py  academia.py  gscholar.py  scihub.py
cmake/: FindPackageHandleStandardArgs.cmake  clang-cpp-checks.cmake  utils.cmake
etc/: default.nix  requirements.txt  shell.nix
etc/git-hooks/: install-hooks.sh  pre-commit-clang-format-hook  pre-commit-hook
include/: algorithm.hpp  ascii.hpp  colours.hpp  command_line.hpp  common.hpp  config.hpp  config.hpp.cmake  curses_wrap.hpp  downloader.hpp  errors.hpp  functional.hpp  item.hpp  keys.hpp  logger.hpp  runes.hpp  screen_butler.hpp  storage.hpp  str_const.hpp  time.hpp  tui.hpp  utils.hpp  version.hpp  version.hpp.cmake
include/components/: command_line.hpp  downloader.hpp  logger.hpp  menu.hpp  screen_butler.hpp  script_butler.hpp  searcher.hpp
include/core/: algorithm.hpp  functional.hpp  item.hpp  plugin_handler.hpp  python.hpp  utils.hpp
include/screens/: base.hpp  item_details.hpp  log.hpp  multiselect_menu.hpp
libgen/: __init__.py  item.py  libgen.py
src/: CMakeLists.txt  README.md  bindings.cpp  bookwyrm.cpp  bookwyrm.hpp  command_line.cpp  common.hpp  downloader.cpp  downloader.hpp  errors.hpp  format.cpp  item.cpp  item.hpp  keys.cpp  logger.cpp  logger.hpp  main.cpp  ostream.cpp  ostream.hpp  posix.cpp  posix.hpp  printf.hpp  runes.hpp  screen_butler.cpp  str_const.hpp  string.cpp  string.hpp  time.hpp  tui.cpp  tui.hpp  utils.cpp  utils.hpp  version.hpp  version.hpp.cmake
src/bindings/: CMakeLists.txt  python.cpp
src/components/: command_line.cpp  command_line.hpp  downloader.cpp  downloader.hpp  logger.cpp  menu.cpp  screen_butler.cpp  script_butler.cpp  searcher.cpp
src/core/: CMakeLists.txt  README.md  algorithm.hpp  functional.hpp  hash.hpp  item.cpp  item.hpp  plugin_handler.cpp  plugin_handler.hpp  prefix.hpp.cmake  python.hpp  utils.cpp  utils.hpp
src/core/bindings/: CMakeLists.txt  python.cpp
src/core/plugins/: debug-log-entry-generator.py  debug-sleep-error.py  libgen.py  log-entry-generator.py  missing-find.py  testsource-sleep.py  testsource.py
src/plugins/: README.md  libgen.py
src/screens/: base.cpp  item_details.cpp  item_details.hpp  log.cpp  multiselect-menu.cpp  multiselect_menu.cpp  multiselect_menu.hpp
src/seekers/: libgen.old.py  libgen.py  log-entry-generator.py  testsource-sleep.py  testsource.py
src/seekers/invalid_path_object.py/: README.md
src/sources/: log-entry-generator.py  syntax_error.py  testfile.py  testsource-sleep.py  testsource.py  testsource2.py
src/tui/: CMakeLists.txt  README.md  colours.hpp  curses_wrap.hpp  keys.hpp  logger.cpp  logger.hpp  runes.hpp  str_const.hpp  tui.cpp  tui.hpp  utils.cpp  utils.hpp
src/tui/screens/: base.cpp  base.hpp  footer.cpp  footer.hpp  index.cpp  index.hpp  item_details.cpp  item_details.hpp  log.cpp  log.hpp  multiselect_menu.cpp  multiselect_menu.hpp
test/: CMakeLists.txt  run.sh
test/core/: TODO  feed-item.py  missing-find.py  success-but-no-work.py  syntax-error.py
test/src/: test_run_plugin.sh
tests/: CMakeLists.txt
tests/core/: missing-find.py
tests/detach/: worker1.py
tests/plugins/: TODO  debug-logging.py  exception.py  feed-item.py  feed-none.py  importlib.py  invalid-authors.py  not-importing-pybookwyrm.py
tests/src/: test_detach.cpp  test_run_plugin.cpp  test_run_plugin.sh
